[package]
name = "pihost"
version = "0.1.0"
authors = ["libr <librchn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.0"
wasmi = "0.4.1"
ctrlc = { version = "3.0", features = ["termination"] }

[target.'cfg(any(target_arch = "arm", target_arch = "armv7"))'.dependencies]
blinkt = "0.4.0" # Contitional compilation if we target for armv7